--- a/main_styling.less
+++ b/main_styling.less
@@ -73,11 +73,11 @@ blockquote:before {
   vertical-align:-.4em;
 }
 pre {
- white-space: pre-wrap;       /* css-3 */
- white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
- white-space: -pre-wrap;      /* Opera 4-6 */
- white-space: -o-pre-wrap;    /* Opera 7 */
- word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ white-space: pre-wrap;       
+ white-space: -moz-pre-wrap; 
+ white-space: -pre-wrap;
+ white-space: -o-pre-wrap;
+ word-wrap: break-word;
 }
 .transition {
   -moz-transform: all 0.1s ease 0s;	
@@ -96,9 +96,7 @@ pre {
 .clearfix {
   zoom:1;
 }
-.white-bg{
-	background-color: #fff !important;
-}
+
 .none {
   display:none;
 }
@@ -137,13 +135,11 @@ body.header-fixed {
 		left: 0;
 		width: 100%;
 		z-index: 999;
-		ul.menu li a {
 
-		}
 	}
 }
 #menu-mobile {
-	display: block;
+	display: none;
 	position: fixed;	
 	top: 47px;	
 	right: -250px;	
@@ -210,6 +206,7 @@ body.header-fixed {
 				a{
 				    color: #aaa;
 				    height: 35px;
+				    display: block;
 				    line-height: 36px;
 				    padding-left: 30px;
 				    transition: all 0.25s ease-out 0s;	
@@ -226,7 +223,6 @@ body.header-fixed {
 			}
 		}
 	}
-
 	.search-text {
 		display: block;
 		clear: both;
@@ -337,6 +333,15 @@ body.header-fixed {
 		}
 	}
 	nav.main {
+		&.white-bg{
+			background-color: #fff;
+				ul.menu li a {
+					background-color: #fff;
+						&:hover{
+							background-color: #d6d6d6;					
+						}
+				}	
+		}
 		height: 66px;
 		line-height: 67px;
 		font-size: 14px;
@@ -364,19 +369,87 @@ body.header-fixed {
 			}	
 		}
 		ul.menu {
+			display: block;
 			position: absolute;
 			right: 0;
+			top: 0;
+			& > li {
+				&:first-child {
+					border-left: none;
+				}
+				border-left: 1px solid #d6d6d6;
+				float: left;
+				text-transform: uppercase;
+				list-style: none;
+				
+			}
+			li{
+				a{
+					display: block;
+					height: 65px;
+					padding: 0 15px;
+					color: #313131;
+					background-color: #f6f6f6;
+					-webkit-transition: background .25s ease-out;
+					-moz-transition: background .25s ease-out;
+					-o-transition: background .25s ease-out;
+					transition: background .25s ease-out;		
+					&:hover{
+						background-color: #d6d6d6 !important;					
+					}			
+				}
+				&.search{
+					span{
+						position: relative;
+						display: block;
+						width: 66px;
+						height: 65px;
+						background: #444;
+						cursor: pointer;
+						-webkit-transition: all .25s ease-out;
+						-moz-transition: all .25s ease-out;
+						-o-transition: all .25s ease-out;
+						transition: all .25s ease-out;
+						.fa-search{
+							color: #fff;
+							position: absolute;
+							top: 30%;
+							left: 30%;
+							text-align: center;						
+						}
+						&:hover{
+							opacity: .75;
+						}
+						&.active {
+							background-color: #d6d6d6;
+						}	
+					}				
+				}
+			}
+			
 		}			
 	}
 	nav.search {
-	    border: 0 none;
-	    height: 0;
-	    overflow: inherit;
-	    visibility: visible;
-	    width: 100%;
-	    top: -47px;
-	    transition: all 0.25s ease-out 0s;	    
-	    z-index: 201;
+		&.open {
+			visibility: visible;
+			opacity: 1;
+			top: 0;
+			height: 47px;
+			.menu-responsive {
+				right: 200px !important;
+				top: -10px !important;
+			}
+		}
+		visibility: hidden;
+		opacity: 0;
+		top: -47px;
+		height: 0;
+		overflow: hidden;
+		z-index: 9;
+		-webkit-transition: all .25s ease-out;
+		-moz-transition: all .25s ease-out;
+		-ms-transition: all .25s ease-out;
+		transition: all .25s ease-out;
 	    .right{
 			background-color: #F4F4F4;
 			border-left: 1px solid #D6D6D6;	    
@@ -386,7 +459,7 @@ body.header-fixed {
 			    display: block;
 			    width: 100%;
 		    }
-			ul.menu2 {
+			ul.menu-2 {
 			    border-right: 0 none;
 			    float: left;
 			    & > li:first-child{
@@ -396,8 +469,7 @@ body.header-fixed {
 					    font-style: normal;
 					    font-size: 17px;
 			    		font-weight: bold;
-					    padding-right: 13px;
-					    
+					    padding-right: 13px;			    
 					}
 			    	
 			    	&:after{
@@ -448,13 +520,14 @@ body.header-fixed {
 						    right: 19px;
 						    top: 50%;
 						    transform: rotate(-45deg);
+						    -webkit-transform: rotate(-45deg);
 						    transition: all 0.25s ease-out 0s;
 						    width: 1px;
 						}
 						&:after{
-
 						    right: 15px;
 						    transform: rotate(-135deg);
+						    -webkit-transform:rotate(-135deg);
 						}
 						
 						&:hover:before,&:hover:after{
@@ -468,11 +541,30 @@ body.header-fixed {
 			    display: block;
 			    float: none;
 			    position: absolute;
-			    right: 240px;
+			    right: 70px;
 			    top: -19px;
 				li {
 				    line-height: 65px;
 				}
+			}
+			.search-text{
+				display: block;
+				height: 47px;
+				float: right;
+				.text {
+					position: relative;
+					width: 199px;
+					height: 47px;
+					padding: 0 15px 0 30px;
+					background: #f4f4f4;
+					border: 0;
+					font-weight: bold;
+					color: #313131;
+					z-index: 1;	
+				}	
+				.bt-search{
+					display: none;
+				}		
 			}
 		}
 	}	
@@ -611,10 +703,6 @@ body.header-fixed {
 	}
 	
   }
-  .post-detail a:hover, .single-meta a:hover {
-    color:#ba89b6;
-    text-decoration:underline;
-  }
   .post-time {
     color:#cccccc;
     display:block;
@@ -624,6 +712,13 @@ body.header-fixed {
     text-align:center;
   }
   .post-detail{
+  	a{
+	  	color:#ba89b6;
+	  	&:hover{
+			color:#ba89b6;
+		    text-decoration:underline;		  	
+	  	}
+  	}
   	ul,ol {
   		background: #f9f9f9;
   		border: 1px dashed #8d8d8d;
@@ -666,8 +761,9 @@ body.header-fixed {
 	    border-radius:4px;
 	    display:block;
 	    margin:0 auto;
+	    height: auto;
 	    padding:4px;
-	    width:auto;	
+	    width:750px;	
 	    &:hover{
 		    border:1px solid #986794;
 	    }	
@@ -682,14 +778,19 @@ body.header-fixed {
     margin-top:25px;
     margin-bottom:25px;
     padding:15px 10px 15px 10px;
+    a{
+	    color:#666666;
+	    &:hover{
+			color:#ba89b6;
+		    text-decoration:underline;			    
+	    }
+    }
     .category {
       margin-bottom:10px;
     }
   }
 }
-header #header-cate ul li a, #right-sidebar ul li a, #left-sidebar ul li a, #page-wrap .post-detail a, #page-wrap .single-meta a {
-  color:#666666;
-}
+
 #mini-s {
   color:#999999;
   font-size:26px;
@@ -1212,7 +1313,7 @@ textarea#comment:focus {
     border-width: 1px 0 1px;
     display: block;
     height: 60px;
-    margin: 0 auto 20px;
+    margin: 20px auto 20px;
     position: relative;
     width: 960px;
     li a,li{
@@ -1228,7 +1329,7 @@ textarea#comment:focus {
 	    a:hover{
 		    background: none repeat scroll 0 0 #F2F2F2;
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1) inset;
-			color:#eb182c;
+			color:#ba89b6;
 	    }    
     }
     li.active a{
@@ -1344,8 +1445,79 @@ textarea#comment:focus {
 	    }
 	}    
 }
+.wrap-pixiv{
+	background: #ffffff;
+	border: 1px solid #dddddd;
+	overflow: hidden;
+	padding: 25px 15px 75px;
+	position: relative;
+	z-index: 1;
+}
+#pixiv{
+	section.rank-item{
+		display: inline-block;
+		width: 306px;
+		text-align: center;
+		vertical-align: top;
+		padding: 0 10px 0;
+		position: relative;
+		margin-bottom: 40px;
+		&#rank-1{
+			.rank{
+				color: #B5495B;
+			}			
+		}
+		&#rank-2{
+			.rank{
+				color: #DB4D6D;
+			}
+		}
+		&#rank-3{
+			.rank{
+				color: #E87A90;
+			}
+		}
+		.rank{
+			word-wrap: break-word;
+			font-weight: bold;
+			font-size: 16px;
+		}
+		a.work{
+			display: block;
+			width: 246px;
+			margin: 0 auto;	
+			img{
+				border: 1px solid #dddddd;
+				border-radius: 4px;
+				display: block;
+				margin: 0 auto;
+				padding: 4px;
+				width: auto;	
+				&:hover{
+					border:1px solid #986794;
+				}			
+			}			
+		}
+		h2{
+			display: inline-block;
+			margin: 5px 10px 0;
+			font-size: 16px;
+			line-height: 24px;
+			font-weight: bold;			
+		}
+		a.user{
+			margin: 0 10px;
+			color: #ba89b6;
+			&:hover{
+				text-decoration: underline;
+			}
+		}
+		p{
+			display: none;
+		}		
+	}
 
-
+}
 footer {
   margin:20px auto;
   width:960px;
@@ -1367,19 +1539,47 @@ footer {
     vertical-align:middle;
     a {
       color:#777777;
+      &:hover{
+      	color:#333333;
+      }
     }
-    a:hover {
-      color:#333333;
-    }
-    span:hover{
-      cursor: default;
-	  text-decoration: underline;
+    span{
+    	&.heart{
+	    	color: #e16b8c;
+	    	&:hover{
+		    	cursor: default;
+		    	text-decoration: none;
+	    	}
+    	}
+	    color: #ba89b6;
+	    &:hover{
+	      cursor: default;
+		  text-decoration: underline;		    
+	    }
     }
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	.hitokoto{
 		display: none !important;
+	}
+	#menu-mobile {
+		display: block;
+	}
+	nav.main ul.menu {
+		display: none !important;
+	}
+	#header nav.search {
+		visibility: visible;
+		width: 100%;
+		height: 0;
+		border: 0;
+		overflow: inherit;
+		opacity: 1;
+		z-index: 201;
+		.right .search-text{
+			display: none;
+		}
 	}
 	#post {
 	    display: block;
@@ -1393,6 +1593,10 @@ footer {
 			    width: 360px;
 		    }	    
 	    }
+	}
+	.wrap-pixiv{
+		width: 740px;
+		padding: 25px 45px 75px;
 	}
 	#page-wrap{
 		width: 740px;
@@ -1440,6 +1644,12 @@ footer {
 	}
 	nav.search{
 		display: none !important;
+	}
+	nav.main ul.menu {
+		display: none !important;
+	}	
+	#menu-mobile {
+		display: block;
 	}	
 	#post {
 	    display: block;
@@ -1452,6 +1662,10 @@ footer {
 		    }	    
 	    }
 	}
+	.wrap-pixiv{
+		width: 440px;
+		padding: 25px 65px 75px;
+	}	
 	#page-wrap{
 		width: 440px;
 		#single{
@@ -1525,7 +1739,9 @@ footer {
 			}		
 		}		
 	}
-	
+	.navigation{
+		width: 100%;
+	}
 	footer{
 		width: 100%;
 		#footer{
@@ -1556,6 +1772,12 @@ footer {
 	nav.search{
 		display: none !important;
 	}
+	nav.main ul.menu {
+		display: none !important;
+	}
+	#menu-mobile {
+		display: block;
+	}
 	
 	#post {
 	    display: block;
@@ -1568,6 +1790,7 @@ footer {
 		    }	    
 	    }
 	}
+		
 	#page-wrap{
 		width: 300px;
 		#single{
@@ -1577,6 +1800,9 @@ footer {
 					height: auto;
 					width: 260px;
 				}
+			}
+			.rank-item{
+				width: auto;
 			}
 		}
 		.wrap-single{
@@ -1648,6 +1874,9 @@ footer {
 			}
 		}		
 	}
+	.navigation{
+		width: 100%;
+	}	
 	footer{
 		width: 100%;
 		#footer{
