--- a/main_styling.less
+++ b/main_styling.less
@@ -696,7 +696,7 @@ body.header-fixed {
 			opacity: 1;
 		}	
 	}  
-	.tool-comment,.tool-down,.tool-up{
+	.tool-icon{
 		color: #000;
 		text-align: center;
 		line-height: 58px
@@ -763,7 +763,7 @@ body.header-fixed {
 	    margin:0 auto;
 	    height: auto;
 	    padding:4px;
-	    width:750px;	
+	    max-width:750px;	
 	    &:hover{
 		    border:1px solid #986794;
 	    }	
@@ -1605,7 +1605,7 @@ footer {
 			.post-detail{
 				img{
 					height: auto;
-					width: 600px;
+					max-width: 600px;
 				}
 			}
 	    }	
@@ -1673,7 +1673,7 @@ footer {
 			.post-detail{
 				img{
 					height: auto;
-					width: 400px;
+					max-width: 400px;
 				}
 			}
 		}	
@@ -1798,7 +1798,7 @@ footer {
 			.post-detail{
 				img{
 					height: auto;
-					width: 260px;
+					max-width: 260px;
 				}
 			}
 			.rank-item{
