--- a/main_styling.less
+++ b/main_styling.less
@@ -776,7 +776,7 @@ body.header-fixed {
     color:#444444;
     font-size:14px;
     margin-top:25px;
-    margin-bottom:25px;
+    margin-bottom:15px;
     padding:15px 10px 15px 10px;
     a{
 	    color:#666666;
@@ -788,6 +788,14 @@ body.header-fixed {
     .category {
       margin-bottom:10px;
     }
+  }
+  .WPSNS_main{
+	  border-bottom: 1px solid #dddddd;
+	  color: #444;
+	  font-size:14px;
+	  span{
+		  padding-left: 10px;
+	  }
   }
 }
 
