--- a/main_styling.less
+++ b/main_styling.less
@@ -1511,6 +1511,17 @@ textarea#comment:focus {
 				}			
 			}			
 		}
+		a.ugoira-thumbnail:before{
+			background: url("images/playable.png") no-repeat scroll center center / 20px auto rgba(153, 153, 153, 0.5);
+			border-radius: 3px;
+			content: "";
+			height: 26px;
+			left: 16px;
+			position: absolute;
+			top: 16px;
+			width: 26px;	
+			margin: 15px 0 0 20px;		
+		}
 		h2{
 			display: inline-block;
 			margin: 5px 10px 0;
