--- a/main_styling.less
+++ b/main_styling.less
@@ -1061,6 +1061,12 @@ nav.filters {
               font-weight: normal;
               margin: 0;
               unicode-bidi: normal;
+              a {
+                .transition(all,.2s,ease-in-out);
+                &:hover {
+                  color:#ba89b6;
+                }
+              }
             }
             time {
               color: #999;
